--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/eant/pwbean-m4-00-express/issues"
   },
-  "homepage": "https://github.com/eant/pwbean-m4-00-express#readme"
+  "homepage": "https://github.com/eant/pwbean-m4-00-express#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^1.19.2"
+  }
 }
